# case-conversion

./: .gitignore  LICENSE.txt  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
case-conversion/: case_conversion_test.py
case_conversion/: __init__.py  case_conversion.py  case_parse.py  main.py
tests/: case_conversion_test.py  test.py  test_all.py
