[tool.poetry]
name = "case-conversion"
version = "3.0.0"
description = "Convert between different types of cases (unicode supported)"
license = "MIT"
authors = ["Alejandro Frias <joker454@gmail.com>"]
repository = "https://github.com/AlejandroFrias/case-conversion"
readme = "README.md"
keywords = ["case", "convert", "conversion"]

    [tool.poetry.dependencies]
    python = "^3.6"
    regex = "^2019.8"

    [tool.poetry.dev-dependencies]
    mypy = "*"

    # flake8
    flake8 = "*"
    flake8-annotations-coverage = "*"
    flake8-blind-except = "*"
    flake8-comprehensions = "*"
    flake8-debugger = "*"
    flake8-docstrings = "*"
    flake8-eradicate = "*"
    pep8-naming = "*"
    wemake-python-styleguide = "*"
    darglint = "*"

    # formatting
    black = "^19.3b0"
    blacken-docs = "*"
    docformatter = "*"
    isort = "*"

    # pytest
    pytest = "*"
    pytest-cov = "*"
    pytest-monkeytype = "*"
    pytest-mypy = "*"
    pytest-print = "*"
    pytest-sugar = "*"
    pytest-xdist = "*"

    # pre-commit
    pre-commit = "*"
    pygments-pre-commit = "*"

    # other
    radon = "*"
    cohesion = "*"
    vulture = "*"
    flynt = "^0.35.0"

[tool.isort]
line_length = 88
combine_star = true
known_third_party = []

[tool.black]
line-length = 88
target_version = ['py38']

[tool.pytest]
addopts = "--mypy"

[flake8]
ignore = ['D100','D101','D102','D103','D107','Q000','Z306']
exclude = ['.git','__pycache__','docs/source/conf.py','old','build','dist']
max-complexity = 10
max-line-length = 88

[mypy]
check_untyped_defs = true
disallow_subclassing_any = true
ignore_missing_imports = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
